manifests/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-bin-route
  namespace: http
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - kind: Gateway
      name: global-ext-bin
      namespace: default
  hostnames:
    - "34.8.209.202.nip.io"
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: httpbin
          kind: Service
          port: 80
          namespace: http
